# ddr

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.yaml
docs/: ddr.1
scripts/: build.py  clean.py  install.py  manifest.xml  package.py  uninstall.py
src/: infra.rs  main.rs  models.rs  networks.rs  services.rs  utils.rs  volumes.rs
