[package]
name = "ddr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
ssh2 = "0.9.5"
tokio = "1.47.1"
